# kids-video-agent

./: .env.example  .gitignore  AGENTS.md  QUICKSTART.md  README.md  activate_v3.py  activate_wf.py  api_server.py  app.py  bing_auth_state.json  check_api_key.py  check_auth.py  check_installed_nodes.py  check_n8n.py  check_n8n2.py  check_nodes.py  check_nodes2.py  check_python_node.py  check_roles.py  check_schema.py  check_schema2.py  check_settings.py  create_api_key.py  create_auto_workflow.py  create_auto_workflow_v5.py  create_v3_workflow.py  create_v4_workflow.py  create_workflow.py  debug_workflow.py  feature_list.json  fix_connections.py  fix_trigger.py  fix_workflow.py  fix_workflow_v2.py  generate_prompts.py  login_bing.py  make_video.py  n8n_workflow.json  n8n_workflow_full.json  progress.md  (+11 more)
.github/workflows/: auto_generate.yml  create-video.yml
agents/: browser_agent.py  image_agent.py  image_processor.py  music_agent.py  orchestrator.py  prompt_agent.py  script_agent.py  seo_agent.py  video_composer.py  voice_agent.py
harness/: alerts.py  config.yaml  health_check.py
harness/logs/: 2026-07-06.json
input_images/: narration.json  narration_animals.json
src/: config.py  main.py
src/agent/: conditions.py  graph.py  state.py
src/templates/: rhymes.py
src/tools/: account_tracker.py  asset_manager.py  blender_tools.py  content_generator.py  email_tools.py  ffmpeg_tools.py  google_video_pipeline.py  google_vids_generator.py  groq_tools.py  image_to_video.py  image_tools.py  music_tools.py  notifier.py  piper_tts_tools.py  (+3 more)
tests/: test_graph.py
(+13 files in other folders)
